# fastapi-tips

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/core/: config.py  dependencies.py  logging.py
src/db/: __init__.py  memoria_db.py
src/middleware/: request_id.py
src/models/: contato.py  enums.py  error_response.py
src/routers/: admin.py  contatos.py  health.py  root.py
src/utils/: query_utils.py
